--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
 :root {
-  --color-white--: #FFF;
+  --color-white--: #fff;
   --color-black--: #000;
   --color-red-secondary--: #ea491b;
   --color-blue-primary--: #5c94ea;
@@ -14,7 +14,7 @@
   --color-gray-tertiary--: #9ca3af;
   --color-indigo-primary--: #1c0953;
 
-  --transition--: all .4s ease;
+  --transition--: all 0.4s ease;
 }
 
 body {
@@ -35,4 +35,268 @@ body {
 
 html {
   /*font-size: 62.5%;*/
+}
+
+// --------- css define ---------------
+.w-full {
+  width: 100%;
+}
+.grid {
+  display: grid;
+}
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+.pb-5 {
+  padding-bottom: 1.25rem /* 20px */;
+}
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+.mb-5 {
+  margin-bottom: 1.25rem /* 20px */;
+}
+.pl-10 {
+  padding-left: 2.5rem /* 40px */;
+}
+.flex {
+  display: flex;
+}
+.gap-5 {
+  gap: 1.25rem /* 20px */;
+}
+.items-center {
+  align-items: center;
+}
+.my-3 {
+  margin-top: 0.75rem /* 12px */;
+  margin-bottom: 0.75rem /* 12px */;
+}
+.mt-2 {
+  margin-top: 0.5rem /* 8px */;
+}
+.gap-4 {
+  gap: 1rem /* 16px */;
+}
+.justify-between {
+  justify-content: space-between;
+}
+.mt-5 {
+  margin-top: 1.25rem /* 20px */;
+}
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+.mb-5 {
+  margin-bottom: 1.25rem /* 20px */;
+}
+.grid-cols-12 {
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+}
+.w-3\/4 {
+  width: 75%;
+}
+@media (min-width: 768px) {
+  .md\:w-5\/6 {
+    width: 83.333333%;
+  }
+}
+.m-auto {
+  margin: auto;
+}
+.h-16 {
+  height: 4rem /* 64px */;
+}
+.px-2\.5 {
+  padding-left: 0.625rem /* 10px */;
+  padding-right: 0.625rem /* 10px */;
+}
+.content-center {
+  align-content: center;
+}
+.justify-around {
+  justify-content: space-around;
+}
+.px-4 {
+  padding-left: 1rem /* 16px */;
+  padding-right: 1rem /* 16px */;
+}
+.col-span-4 {
+  grid-column: span 4 / span 4;
+}
+.col-span-3 {
+  grid-column: span 3 / span 3;
+}
+.pl-5 {
+  padding-left: 1.25rem /* 20px */;
+}
+.h-full {
+  height: 100%;
+}
+@media (min-width: 1280px) {
+  .xl\:w-1\/2 {
+    width: 50%;
+  }
+}
+@media (min-width: 1280px) {
+  .xl\:w-1\/2 {
+    width: 50%;
+  }
+}
+.pb-4 {
+  padding-bottom: 1rem /* 16px */;
+}
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
+.-space-x-px > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(-1px * var(--tw-space-x-reverse));
+  margin-left: calc(-1px * calc(1 - var(--tw-space-x-reverse)));
+}
+.inline-flex {
+  display: inline-flex;
+}
+.block {
+  display: block;
+}
+.py-1\.5 {
+  padding-top: 0.375rem /* 6px */;
+  padding-bottom: 0.375rem /* 6px */;
+}
+.px-3 {
+  padding-left: 0.75rem /* 12px */;
+  padding-right: 0.75rem /* 12px */;
+}
+.rounded {
+  border-radius: 0.25rem /* 4px */;
+}
+.border-0 {
+  border-width: 0px;
+}
+.bg-transparent {
+  background-color: transparent;
+}
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+.duration-300 {
+  transition-duration: 300ms;
+}
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+.pointer-events-none {
+  pointer-events: none;
+}
+.focus\:shadow-none:focus {
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+.hover\:text-gray-800:hover {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+.hover\:bg-gray-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+.relative {
+  position: relative;
+}
+.py-1\.5 {
+  padding-top: 0.375rem /* 6px */;
+  padding-bottom: 0.375rem /* 6px */;
+}
+.bg-blue-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.hover\:bg-blue-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+.hover\:bg-blue-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+.hover\:text-gray-800:hover {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+.hover\:bg-gray-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+.gap-16 {
+  gap: 4rem /* 64px */;
+}
+.col-span-7 {
+  grid-column: span 7 / span 7;
+}
+.gap-14 {
+  gap: 3.5rem /* 56px */;
+}
+.grid-cols-10 {
+  grid-template-columns: repeat(10, minmax(0, 1fr));
+}
+.w-5\/6 {
+  width: 83.333333%;
+}
+@media (min-width: 1280px) {
+  .xl\:w-2\/3 {
+    width: 66.666667%;
+  }
+}
+.my-16 {
+  margin-top: 4rem /* 64px */;
+  margin-bottom: 4rem /* 64px */;
+}
+.col-span-8 {
+  grid-column: span 8 / span 8;
+}
+.text-left {
+  text-align: left;
+}
+.col-span-10 {
+  grid-column: span 10 / span 10;
+}
+.col-span-12 {
+  grid-column: span 12 / span 12;
+}
+.faq-blue {
+  color: #3d92e0;
 }
