--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -69,7 +69,7 @@ input[type="password"] {
 }
 
 .login-form {
-  background-color: white;
+  background-color: rgb(235 235 235 / 70%);
   padding: 2rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
