--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -161,7 +161,7 @@ input[type="password"] {
 .social-login-list__button {
   display: flex;
   align-items: center;
-  border: 1px solid #d1d1d1;
+  border: 1px solid #9c9797;
   padding: 5px 15px 5px 10px;
   border-radius: 4px;
   width: 30%;
