[Update]: create write post component done

--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,10 @@
   --color-black--: #000;
   --color-red-secondary--: #ea491b;
   --color-red-tertiary--: #ffe8d0;
+  --color-blue-zero--: #3349af;
   --color-blue-primary--: #5c94ea;
   --color-blue-secondary--: #00b3d8;
+  --color-blue-tertiary--: #e2efff;
   --color-gray-zero--: #b9b9ba;
   --color-gray-primary--: #343434;
   --color-gray-secondary--: #dfdfdf;
