--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,25 +4,54 @@
   background-color: var(--color-indigo-primary--);
   color: var(--color-white--);
   font-weight: 700;
+  padding: 0 10%;
+  text-align: center;
+  margin-top: -3px;
 }
 
-.faq-navbar .faq-navbar__nav {
-  cursor: pointer;
-  text-transform: uppercase;
-}
-
-.faq-navbar__nav.faq-navbar__nav--selected {
+.faq_navbar .faq-navbar__main {
+  height: 6rem;
   position: relative;
 }
 
-.faq-navbar__nav--selected::before {
-  position: absolute;
-  content: '';
-  display: block;
-  bottom: -6px;
-  left: 0;
-  height: 3px;
+.faq-navbar__main label {
+  cursor: pointer;
+  text-transform: uppercase;
+  font-size: 1.6rem;
   width: 100%;
-  background-color: var(--color-white--);
+  z-index: 1;
+}
+
+.faq-navbar__main label p {
+  position: relative;
+  font-size: 1.6rem;
+  transition: color 0.6s ease;
+}
+
+.faq-navbar__main .tab {
+  position: absolute;
+  height: 3px;
+  width: 20%;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+  border-radius: 50px;
+  background: var(--color-white--);
+  transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.faq-navbar__main #following:checked ~ .tab{
+  left: 20%;
+}
+.faq-navbar__main #blog:checked ~ .tab{
+  left: 40%;
+}
+.faq-navbar__main #bookmark:checked ~ .tab{
+  left: 60%;
+}
+
+input[type="radio"] {
+  display: none;
 }
 
