--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 :root {
   --color-white--: #FFF;
@@ -17,13 +14,18 @@
   --color-gray-tertiary--: #9ca3af;
   --color-indigo-primary--: #1c0953;
 
-  --transition--: all .4s ease;
+  --transition--: all .3s ease;
 }
 
 body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-size: 1.4rem;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 .clearfix {
@@ -35,10 +37,6 @@ body {
   clear: both;
   display: table;
 }
-
-/*html {*/
-/*  font-size: 62.5%;*/
-/*}*/
 
 /* Typo */
 .text-blur {
@@ -55,5 +53,11 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+/* disable button  */
+.disabledbutton {
+  pointer-events: none;
+  opacity: 0.4;
 }
 
