[Update]: Post overview, newest question

--- a/src/components/NewestQuestion/NewestQuestion.css
+++ b/src/components/NewestQuestion/NewestQuestion.css
@@ -9,6 +9,10 @@
   border-bottom-width: 1px;
 }
 
+.faq-post-ov__reacts span {
+  display: inline-flex;
+  align-items: center;
+}
 
 .faq-newest-qt .faq-newest-qt__title {
   font-size: 15px;
