[Update]: add loader, filter banner

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,6 +4,7 @@
   padding: 3rem 12.5%;
   background-color: var(--color-indigo-primary--);
   color: var(--color-white--);
+  margin-top: 6rem;
 }
 
 .faq-footer__top {
