--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,7 +6,7 @@
   place-items: center;
   color: var(--color-black--);
   position: relative;
-  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   z-index: 1;
   padding: 0 15%;
 }
@@ -118,6 +118,10 @@
   box-shadow: 0px 0px 0px 4px rgba(0, 116, 204, 0.15) ;
   color: rgb(12, 13, 14);
   outline: 0;
+}
+
+.faq-search__input-box .faq-btn  {
+  height: 100%;
 }
 
 @media screen and (max-width: 1000px) {
