--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,10 @@ html {
   font-size: 62.5%;
 }
 
+ul {
+  padding-left: 0;
+}
+
 .clearfix {
   overflow: auto;
 }
@@ -64,5 +68,9 @@ html {
 .disabledbutton {
   pointer-events: none;
   opacity: 0.4;
+}
+
+.section {
+  margin: 8rem 0;
 }
 
