--- a/src/components/Avatar/Avatar.css
+++ b/src/components/Avatar/Avatar.css
@@ -9,10 +9,17 @@
 }
 
 .faq-avatar.faq-avatar--small {
-  width: 40px;
-  height: auto;
+  width: 4rem;
+  height: 4rem;
 }
 
-.faq-avatar--small img {
+.faq-avatar.faq-avatar--medium {
+  width: 10rem;
+  height: 10rem;
+}
+
+.faq-avatar img {
   width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
