--- a/src/pages/Search/SearchPage.css
+++ b/src/pages/Search/SearchPage.css
@@ -182,3 +182,10 @@
 .faq-search__more button.faq-btn {
   padding: 10px 100px !important;
 }
+
+.result-text {
+  text-decoration: underline;
+  font-weight: 500;
+  font-size: 1.6rem;
+  margin: 0 4px;
+}
