--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -1,56 +1,69 @@
-@import "../../index.css";
-
-.pagination ul {
-  width: 100%;
+.pagination-container {
   display: flex;
-  flex-wrap: wrap;
-  background: #fff;
-  padding: .8rem;
-  border-radius: 5rem;
+  list-style-type: none;
 }
-
-.pagination ul li {
-  color: var(--color-blue-secondary--);
-  list-style: none;
-  line-height: 4.5rem;
+.pagination-container .pagination-item {
+  padding: 0 12px;
+  height: 32px;
   text-align: center;
-  font-size: 1.6rem;
-  font-weight: 500;
-  cursor: pointer;
-  user-select: none;
-  transition: all 0.3s ease;
+  margin: auto 4px;
+  color: rgba(0, 0, 0, 0.87);
+  display: flex;
+  box-sizing: border-box;
+  align-items: center;
+  letter-spacing: 0.01071em;
+  border-radius: 16px;
+  line-height: 1.43;
+  font-size: 13px;
+  min-width: 32px;
 }
 
-.pagination ul li.numb {
-  list-style: none;
-  height: 4.5rem;
-  width: 4.5rem;
-  margin: 0 .3rem;
-  line-height: 4.5rem;
-  border-radius: 50%;
-}
-
-.pagination ul li.numb.first {
-  margin: 0 3px 0 -5px;
-}
-
-.pagination ul li.numb.last {
-  margin: 0 -5px 0 3px;
-}
-
-.pagination ul li.dots {
-  font-size: 1.8rem;
+.pagination-container .pagination-item.dots:hover {
+  background-color: transparent;
   cursor: default;
 }
-.pagination ul li.btn {
-  padding: 0 1rem;
-  border-radius: 5rem;
+
+.pagination-container .pagination-item:hover {
+  background-color: rgba(0, 0, 0, 0.04);
+  cursor: pointer;
 }
 
-.pagination li.active,
-.pagination ul li.numb:hover,
-.pagination ul li:first-child:hover,
-.pagination ul li:last-child:hover {
-  color: #fff;
-  background: var(--color-blue-secondary--);
+.pagination-container .pagination-item.selected {
+  background-color: var(--color-blue-secondary--);
+  color: var(--color-white--);
+}
+
+.pagination-container .pagination-item .arrow::before {
+  position: relative;
+  /* top: 3pt;
+   Uncomment this to lower the icons as requested in comments*/
+  content: '';
+  /* By using an em scale, the arrows will size with the font */
+  display: inline-block;
+  width: 0.4em;
+  height: 0.4em;
+  border-right: 0.12em solid rgba(0, 0, 0, 0.87);
+  border-top: 0.12em solid rgba(0, 0, 0, 0.87);
+}
+
+.pagination-container .pagination-item .arrow.left {
+  transform: rotate(-135deg) translate(-50%);
+}
+
+.pagination-container .pagination-item .arrow.right {
+  transform: rotate(45deg);
+}
+
+.pagination-container .pagination-item.disabled {
+  pointer-events: none;
+}
+
+.pagination-container .pagination-item.disabled .arrow::before {
+  border-right: 0.12em solid rgba(0, 0, 0, 0.43);
+  border-top: 0.12em solid rgba(0, 0, 0, 0.43);
+}
+
+.pagination-container .pagination-item.disabled:hover {
+  background-color: transparent;
+  cursor: default;
 }
