--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
   background-color: var(--color-indigo-primary--);
   color: var(--color-white--);
   font-weight: 700;
-  padding: 0 10%;
+  padding: 0 30%;
   text-align: center;
   margin-top: -3px;
 }
@@ -45,4 +45,10 @@
   position: relative;
   font-size: 1.5rem;
   transition: color 0.6s ease;
+}
+
+@media screen and (max-width: 1000px) {
+  .faq-navbar {
+    padding: 0 10%;
+  }
 }
