--- a/src/pages/Search/SearchPage.css
+++ b/src/pages/Search/SearchPage.css
@@ -131,6 +131,9 @@
 .faq-search__results {
   margin: 50px 0;
   padding: 0 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .faq-post-ov {
