--- a/src/components/Avatar/Avatar.css
+++ b/src/components/Avatar/Avatar.css
@@ -19,8 +19,9 @@
 }
 
 .faq-avatar img {
-  width: 60px;
-  height: auto;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
 
 .faq-avatar.faq-avatar--big {
