--- a/src/components/Bookmark/Bookmark.css
+++ b/src/components/Bookmark/Bookmark.css
@@ -1,9 +1,8 @@
 .faq-button-bookmark {
     background-color: #5C94EA;
-    width:250px;
-    height:30px;
     border-radius: 5px;
-    font-size: 1rem;
+    font-size: 2rem;
     color: #fff;
     margin-bottom: 2rem;
+    padding: 20px 30px;
 }
