--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,230 +1,263 @@
 .faq-header {
-  display: grid;
-  grid-template-columns: 10% 30% 60%;
-  font-size: 1.5rem;
-  height: 8rem;
-  place-items: center;
-  color: var(--color-black--);
-  position: relative;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    display: grid;
+    grid-template-columns: 10% 30% 60%;
+    font-size: 1.5rem;
+    height: 8rem;
+    place-items: center;
+    color: var(--color-black--);
+    position: relative;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
     rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-  z-index: 1;
-  padding: 0 15%;
+    z-index: 1;
+    padding: 0 15%;
 }
 
 .faq-logo {
-  width: 4rem;
+    width: 4rem;
 }
+
 .faq-img {
-  width: 3rem;
-  height: auto;
-  margin: 0 auto;
+    width: 3rem;
+    height: auto;
+    margin: 0 auto;
 }
 
 .faq-header__navigation {
-  font-weight: 500;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 3rem;
+    font-weight: 500;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 3rem;
 }
 
 .faq-header__navigation .faq-header__link {
-  cursor: pointer;
-  border-bottom: 2px solid white;
-  transition: all 0.2s ease;
-  text-align: center;
-  height: 4rem;
-  padding: 0 1rem;
-  border-radius: 0.6rem;
+    cursor: pointer;
+    border-bottom: 2px solid white;
+    transition: all 0.2s ease;
+    text-align: center;
+    height: 4rem;
+    padding: 0 1rem;
+    border-radius: 0.6rem;
 }
 
 .faq-header__navigation a {
-  text-decoration: none;
-  color: var(--color-black--);
-  line-height: 4rem;
-  font-weight: 500;
-  transition: all 0.2s ease;
+    text-decoration: none;
+    color: var(--color-black--);
+    line-height: 4rem;
+    font-weight: 500;
+    transition: all 0.2s ease;
 }
 
 .faq-header__navigation .faq-header__link:hover {
-  background-color: var(--color-blue-secondary--);
-  transition: var(--transition--);
-  border-radius: 0.6rem;
+    background-color: var(--color-blue-secondary--);
+    transition: var(--transition--);
+    border-radius: 0.6rem;
 }
 
 .faq-header__navigation .faq-header__link:hover a {
-  color: var(--color-white--);
-  transition: var(--transition--);
+    color: var(--color-white--);
+    transition: var(--transition--);
 }
 
 .faq-header__utils {
-  display: grid;
-  grid-template-columns: 68% 8% 8% 8% 8%;
-  place-items: center;
-  width: 90%;
+    display: grid;
+    grid-template-columns: 68% 8% 8% 8% 8%;
+    place-items: center;
+    width: 90%;
 }
 
 .faq-header__utils .faq-header__search {
-  width: 100%;
+    width: 100%;
 }
 
 .faq-header .faq-search__input-box {
-  display: grid;
-  grid-template-columns: 80% 20%;
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 60rem;
-  background-color: var(--color-white--);
-  padding: 2rem 3rem;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  border-radius: 1rem;
-  transition: var(--transition--);
-  z-index: -1;
-  visibility: hidden;
-  opacity: 0;
+    display: grid;
+    grid-template-columns: 80% 20%;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 60rem;
+    background-color: var(--color-white--);
+    padding: 2rem 3rem;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 1rem;
+    transition: var(--transition--);
+    z-index: -1;
+    visibility: hidden;
+    opacity: 0;
 }
 
 .faq-header .search-expand {
-  transition: var(--transition--);
-  bottom: -9rem;
-  z-index: 9;
-  visibility: visible;
-  opacity: 1;
+    transition: var(--transition--);
+    bottom: -9rem;
+    z-index: 9;
+    visibility: visible;
+    opacity: 1;
 }
 
 .faq-header .search-expand::before {
-  position: absolute;
-  width: 2rem;
-  height: 2rem;
-  content: "";
-  display: block;
-  background-color: var(--color-white--);
-  transform: rotate(45deg);
-  right: 18rem;
-  top: -1rem;
-  border-top: 1px solid var(--color-gray-secondary--);
-  border-left: 1px solid var(--color-gray-secondary--);
+    position: absolute;
+    width: 2rem;
+    height: 2rem;
+    content: "";
+    display: block;
+    background-color: var(--color-white--);
+    transform: rotate(45deg);
+    right: 18rem;
+    top: -1rem;
+    border-top: 1px solid var(--color-gray-secondary--);
+    border-left: 1px solid var(--color-gray-secondary--);
 }
 
 .faq-header .faq-search__input-box .faq-search__input {
-  width: 95%;
-  height: 40px;
-  border: 1px solid #b5b8bc;
-  border-radius: 4px;
-  padding: 0 1rem;
-  font-size: 1.4rem;
-  outline: none;
+    width: 95%;
+    height: 40px;
+    border: 1px solid #b5b8bc;
+    border-radius: 4px;
+    padding: 0 1rem;
+    font-size: 1.4rem;
+    outline: none;
 }
 
 .faq-search__input-box .faq-search__input:focus {
-  border-color: rgb(89, 164, 222);
-  box-shadow: 0px 0px 0px 4px rgba(0, 116, 204, 0.15);
-  color: rgb(12, 13, 14);
-  outline: 0;
+    border-color: rgb(89, 164, 222);
+    box-shadow: 0px 0px 0px 4px rgba(0, 116, 204, 0.15);
+    color: rgb(12, 13, 14);
+    outline: 0;
 }
 
 .faq-search__input-box .faq-btn {
-  height: 100%;
+    height: 100%;
 }
 
 @media screen and (max-width: 1000px) {
-  .faq-header {
-    grid-template-columns: 10% 55% 35%;
-    padding: 0 10%;
-  }
+    .faq-header {
+        grid-template-columns: 10% 55% 35%;
+        padding: 0 10%;
+    }
 
-  .faq-header__utils {
-    grid-template-columns: repeat(5, 1fr);
-    width: unset;
-  }
+    .faq-header__utils {
+        grid-template-columns: repeat(5, 1fr);
+        width: unset;
+    }
 
-  .faq-header__utils .faq-header__search {
-    width: unset;
-  }
+    .faq-header__utils .faq-header__search {
+        width: unset;
+    }
 }
 
 .drop-down {
-  min-width: 150px;
-  max-width: 300px;
-  background-color: #fff;
-  box-shadow: 0 2px 12px 0 rgb(0 0 0 / 10%);
-  transform-origin: center top;
-  z-index: 2013;
-  position: absolute;
-  top: 80px;
-  left: 1066px;
+    min-width: 150px;
+    max-width: 300px;
+    background-color: #fff;
+    box-shadow: 0 2px 12px 0 rgb(0 0 0 / 10%);
+    transform-origin: center top;
+    z-index: 2013;
+    position: absolute;
+    top: 80px;
+    left: 1418px;
 }
 
 .drop-down.active {
-  opacity: 1;
-  visibility: visible;
-  transform: translateY(0);
-  transition: 0.3s ease;
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+    transition: 0.3s ease;
 }
 
 .drop-down.inactive {
-  opacity: 0;
-  visibility: hidden;
-  transform: translateY(-20px);
-  transition: 0.3s ease;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-20px);
+    transition: 0.3s ease;
 }
 
 .drop-down-menu {
-  display: flex;
-  /* margin-bottom: 10px; */
-  padding: 5px 10px;
+    display: flex;
+    /* margin-bottom: 10px; */
+    padding: 5px 10px;
 }
 
 .info-change__name {
-  font-size: 1.5rem;
-  font-weight: 600;
-  color: #0a5bd8;
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #0a5bd8;
 }
 
 .info-change__username {
-  color: #808080;
-  padding: 10px;
+    color: #808080;
+    padding: 10px;
 }
 
 .button__edit {
-  padding: 2px 10px 2px 10px;
-  background-color: #2d8df0;
-  color: #fff;
-  border-radius: 5px;
+    padding: 2px 10px 2px 10px;
+    background-color: #2d8df0;
+    color: #fff;
+    border-radius: 5px;
 }
 
 .button__edit:hover {
-  background-color: #5da0e6;
+    background-color: #5da0e6;
 }
 
 .drop-down-menu-item {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  padding-top: 5px;
-  font-size: 1.1rem;
-  padding: 5px 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-top: 5px;
+    font-size: 1.1rem;
+    padding: 5px 10px;
 }
 
 .drop-down-menu-item__link {
-  display: flex;  
+    display: flex;
 }
 
 .drop-down-menu-item:hover {
-  background-color: #e3e3e3;
+    background-color: #e3e3e3;
 }
 
 .menu-item__text {
-  margin-left: 10px;
-  color: #6d6d6d;
+    margin-left: 10px;
+    color: #6d6d6d;
 }
 
 .menu-info {
-  padding-right: 5px;
+    padding-right: 5px;
 }
 
 .link-login-and-logout {
-  width: 165px;
-  margin-left: 100px;
+    width: 165px;
+    margin-left: 100px;
 }
+
+.faq-header__link .box-submenu {
+    position: absolute;
+    background: #398e9f;
+    padding: 5px 10px;
+    margin-left: -8px;
+    background-color: var(--color-blue-secondary--);
+    color: #f0f0f0;
+    z-index: 10000;
+    border-radius: 5px;
+    display: none;
+}
+
+.faq-header__link .box-submenu ul li {
+    list-style-type: none;
+    border-bottom: 1px solid #000 ;
+
+}
+
+.faq-header__link .box-submenu ul li {
+    color: var(--color-black--);
+}
+
+.faq-header__link .box-submenu ul li .box-submenu__link:hover {
+    color: var(--color-black--);
+}
+
+.faq-header__link:hover .box-submenu {
+    display: block;
+}
+
+
