--- a/src/components/PostAuthor/PostAuthor.css
+++ b/src/components/PostAuthor/PostAuthor.css
@@ -1,15 +1,16 @@
 @import "../../index.css";
 
 .faq-blog {
-  font-size: 1.8rem;
+  font-size: 2rem;
 }
 
 .faq-post-o {
   padding: 30px 0;
-  max-width: 700px;
-  width: 100%;
+  max-width: 70%;
   position: relative;
   display: flex;
+  font-size: 23px;
+  margin: 0 auto;
 }
 
 .faq-post-o-header {
@@ -24,7 +25,7 @@
 
 .faq-post-o .faq-post-o__name {
   font-weight: 500;
-  font-size: 14px;
+  font-size: 36px;
   color: var(--color-blue-secondary--);
 }
 
@@ -100,7 +101,7 @@
 }
 
 .btn-follow {
-  font-size: 12px;
+  font-size: 20px;
   border: 1px solid #5c94ea;
   padding: 2px 4px 2px 4px;
   color: #5c94ea;
@@ -130,7 +131,7 @@
 }
 
 .faq-post-ov__tag {
-  font-size: 12px;
+  font-size: 18px;
   color: var(--color-gray-primary--);
   padding: 3px 5px;
   border-radius: 4px;
