--- a/src/components/SimilarPost/SimilarPost.css
+++ b/src/components/SimilarPost/SimilarPost.css
@@ -9,7 +9,7 @@
 }
 
 .faq-item-card__title {
-    font-size: 1rem;
+    font-size: 2rem;
     font-weight: bold; 
     margin-bottom:5px;
 }
@@ -23,4 +23,15 @@
     display: flex;
     justify-content: flex-start;
     margin-bottom: 5px;
+    align-items: center;
+}
+
+.faq-item-card-icon__views{
+    display: flex;
+}
+.faq-item-card-icon__bookmarks{
+    display: flex;
+}
+.faq-item-card-icon__posts{
+    display: flex;
 }
