--- a/src/pages/BlogDetail/BlogDetail.css
+++ b/src/pages/BlogDetail/BlogDetail.css
@@ -13,7 +13,7 @@
 
 
 .faq-post-title {
-    font-size: 1.25rem;
+    font-size: 2.25rem;
     font-weight: 600;
     margin-bottom: 20px;
     margin-top: 50px;
@@ -32,4 +32,13 @@
 
 .icon-of-post__author {
     display: flex;
+}
+
+.faq-bookmark {
+    padding: 30px 0;
+    max-width: 70%;
+    position: relative;
+    display: flex;
+    font-size: 23px;
+    margin: 0 auto;
 }
