--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -58,9 +58,9 @@ input[type="password"] {
 
 .login-form__webname {
   text-align: center;
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   font-weight: 500;
-  margin: 5px 100px;
+  margin: 15px 160px;
 }
 
 .button-container {
@@ -70,7 +70,7 @@ input[type="password"] {
 
 .login-form {
   background-color: rgb(235 235 235 / 70%);
-  padding: 2rem;
+  padding: 3rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -84,7 +84,7 @@ input[type="password"] {
 }
 
 .title {
-  font-size: 1.2rem;
+  font-size: 2rem;
   font-weight: 500;
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -107,6 +107,8 @@ input[type="password"] {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
   padding: 8px 20px;
+  align-items: center;
+  display: flex;
 }
 
 .form-container-detail__input {
@@ -116,7 +118,7 @@ input[type="password"] {
   padding: 10px 10px;
   vertical-align: middle;
   align-items: center;
-  font-size: 1rem;
+  font-size: 1.5rem;
   width: 100%;
 }
 
@@ -132,7 +134,7 @@ input[type="password"] {
   display: flex;
   padding-top: 10px;
   padding-bottom: 10px;
-  font-size: 1rem;
+  font-size: 1.5rem;
   color: #0a5bd8;
 }
 
