--- a/src/pages/BlogDetail/BlogDetail.css
+++ b/src/pages/BlogDetail/BlogDetail.css
@@ -1,9 +1,22 @@
-.faq-post{
-    margin-bottom: 80px;
+.faq-blog {
+    width: 83.33333%;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+    margin: auto;
 }
 
+.faq-corner {
+
+}
+
+.faq-post {
+    margin-bottom: 80px;
+
+}
+
+
 .faq-post-title {
-    font-size: 1.25rem; 
+    font-size: 1.25rem;
     font-weight: 600;
     margin-bottom: 20px;
     margin-top: 50px;
@@ -12,4 +25,10 @@
 .faq-post-suggest {
     display: flex;
     justify-content: space-between;
+}
+
+.icon-of-post__author {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
