--- a/src/components/PostAuthor/PostAuthor.css
+++ b/src/components/PostAuthor/PostAuthor.css
@@ -1,7 +1,7 @@
 @import "../../index.css";
 
 .faq-blog {
-  font-size: 1.4rem;
+  font-size: 1.8rem;
 }
 
 .faq-post-o {
@@ -9,6 +9,7 @@
   max-width: 700px;
   width: 100%;
   position: relative;
+  display: flex;
 }
 
 .faq-post-o .faq-post-o__avatar {
@@ -50,7 +51,7 @@
   color: var(--color-gray-primary--);
 }
 
-// ---------------------author---------------------
+---------------------author---------------------
 .grid {
   display: grid;
 }
@@ -60,7 +61,7 @@
 }
 
 .gap-16 {
-  gap: 4rem;
+  gap: 2rem;
 }
 
 .col-span-1 {
@@ -119,6 +120,7 @@
 
 .icon-of-post {
   margin-left: auto;
+  display: flex;
 }
 
 .faq-post-ov__tag {
