--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,3 @@
-
 .faq-header {
   display: grid;
   grid-template-columns: 10% 30% 60%;
@@ -7,20 +6,20 @@
   place-items: center;
   color: var(--color-black--);
   position: relative;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   z-index: 1;
   padding: 0 15%;
 }
 
 .faq-logo {
   width: 4rem;
-  }
+}
 .faq-img {
   width: 3rem;
   height: auto;
   margin: 0 auto;
 }
-
 
 .faq-header__navigation {
   font-weight: 500;
@@ -32,11 +31,11 @@
 .faq-header__navigation .faq-header__link {
   cursor: pointer;
   border-bottom: 2px solid white;
-  transition: all .2s ease;
+  transition: all 0.2s ease;
   text-align: center;
   height: 4rem;
   padding: 0 1rem;
-  border-radius: .6rem;
+  border-radius: 0.6rem;
 }
 
 .faq-header__navigation a {
@@ -50,7 +49,7 @@
 .faq-header__navigation .faq-header__link:hover {
   background-color: var(--color-blue-secondary--);
   transition: var(--transition--);
-  border-radius: .6rem;
+  border-radius: 0.6rem;
 }
 
 .faq-header__navigation .faq-header__link:hover a {
@@ -99,7 +98,7 @@
   position: absolute;
   width: 2rem;
   height: 2rem;
-  content: '';
+  content: "";
   display: block;
   background-color: var(--color-white--);
   transform: rotate(45deg);
@@ -121,12 +120,12 @@
 
 .faq-search__input-box .faq-search__input:focus {
   border-color: rgb(89, 164, 222);
-  box-shadow: 0px 0px 0px 4px rgba(0, 116, 204, 0.15) ;
+  box-shadow: 0px 0px 0px 4px rgba(0, 116, 204, 0.15);
   color: rgb(12, 13, 14);
   outline: 0;
 }
 
-.faq-search__input-box .faq-btn  {
+.faq-search__input-box .faq-btn {
   height: 100%;
 }
 
@@ -154,8 +153,8 @@
   transform-origin: center top;
   z-index: 2013;
   position: absolute;
-  top: 64px;
-  left: 1010px;
+  top: 80px;
+  left: 1066px;
 }
 
 .drop-down.active {
@@ -172,7 +171,6 @@
   transition: 0.3s ease;
 }
 
-
 .drop-down-menu {
   display: flex;
   /* margin-bottom: 10px; */
@@ -180,13 +178,14 @@
 }
 
 .info-change__name {
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-weight: 600;
   color: #0a5bd8;
 }
 
 .info-change__username {
   color: #808080;
+  padding: 10px;
 }
 
 .button__edit {
@@ -206,6 +205,10 @@
   padding-top: 5px;
   font-size: 1.1rem;
   padding: 5px 10px;
+}
+
+.drop-down-menu-item__link {
+  display: flex;  
 }
 
 .drop-down-menu-item:hover {
