--- a/src/pages/MyProfile/MyProfile.css
+++ b/src/pages/MyProfile/MyProfile.css
@@ -19,7 +19,7 @@
   }
   
   .form-profile-title__label {
-    font-size: 1.25rem;
+    font-size: 2.25rem;
     font-weight: bold;
   }
   
@@ -60,15 +60,19 @@
   
   .form-profile-info__input {
     width: 100%;
-    float: right;
   }
   
   .form-profile-info__label {
     font-weight: 500;
+    margin-right: 40px;
+    font-size: 20px;
   }
   
+  .form-profile-info__data {
+    font-size: 20px;
+  }
+
   .form-profile-info__input {
-    padding: 10px;
     border-radius: 4px;
     border: 1px solid rgb(28 26 26 / 48%) !important;
   }
@@ -76,7 +80,7 @@
   .profile-welcome {
     text-align: center;
     margin-top: 20px;
-    font-size: 1.25rem;
+    font-size: 2.25rem;
     font-weight: 500;
   }
   
